add jwt token based login

--- a/package.json
+++ b/package.json
@@ -81,5 +81,9 @@
     "npm": ">=7.0.0",
     "yarn": ">=1.19.0 < 2.0.0"
   },
+  "volta": {
+    "node": "16.16.0",
+    "yarn": "1.22.19"
+  },
   "packageManager": "yarn@1.22.17"
 }
