--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -76,6 +76,7 @@
     "ical.js": "^1.4.0",
     "ics": "^2.31.0",
     "jimp": "^0.16.1",
+    "jsonwebtoken": "8.5.1",
     "kbar": "^0.1.0-beta.36",
     "libphonenumber-js": "^1.9.53",
     "lodash": "^4.17.21",
@@ -130,6 +131,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/glidejs__glide": "^3.4.2",
     "@types/jest": "^27.5.1",
+    "@types/jsonwebtoken": "8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/memory-cache": "^0.2.2",
     "@types/micro": "7.3.6",
