add credential and app keys encryption

--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,12 @@ NEXTAUTH_URL=
 # @see: https://next-auth.js.org/configuration/options#nextauth_secret
 # You can use: `openssl rand -base64 32` to generate one
 NEXTAUTH_SECRET=
+
+# Used for encrypting the credentials in the database
+# You can use: `openssl rand -base64 32` to generate one
+NEXT_ENCRYPTION_KEY=
+
+
 # Used for cross-domain cookie authentication
 NEXTAUTH_COOKIE_DOMAIN=.example.com
 
