--- a/turbo.json
+++ b/turbo.json
@@ -220,6 +220,7 @@
     "$NEXTAUTH_COOKIE_DOMAIN",
     "$NEXTAUTH_SECRET",
     "$NEXTAUTH_URL",
+    "$NEXT_ENCRYPTION_KEY",
     "$NODE_ENV",
     "$PLAYWRIGHT_HEADLESS",
     "$PLAYWRIGHT_TEST_BASE_URL",
